# Hyper-Paddle

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  main.c.c
.junie/: guidelines.md
include/: config.h
include/GameObjects/Ball/: Ball.h
include/GameObjects/Paddle/: Paddle.h
include/Math/: ComputeCenterYofRectangle.h  Utils.h
include/Systems/: deltaTime.h
include/Systems/KeyboardManager/: keyboardManager.h
include/Systems/KeybordManager/: KeybordManager.h
include/Systems/ScoreManager/: ScoreManager.h
include/UI/Buttons/: buttons.h
include/UI/UIButton/: button.h
src/: main.c
src/GameManager/: Game_Manager.h  Main_Game.c
src/GameObjects/Ball/: Ball.c
src/GameObjects/Paddle/: Paddle.c
src/Math/: Utils.c  computerCenterYofRectangle.c
src/Screens/: screen_level_select.c  screen_logo.c  screen_main_game.c  screen_manager.c  screen_menu.c  screen_settings_menu.c  screen_start_menu.c  screen_start_screen.c  screens.h
src/Systems/: KeybordManager.c  deltaTime.c
src/Systems/KeyboardManager/: keyboardManager.c
src/Systems/KeybordManager/: KeybordManager.c
src/Systems/ScoreManager/: ScoreManager.c
src/UI/Buttons/: buttons.c
src/UI/UIButton/: button.c
tests/: CMakeLists.txt  test_ball.cpp
